fix product picture stretch bug in products listing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,6 +174,14 @@ form>div.actions{
     -moz-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
     box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
   }
+	.product-listing-item__picture {
+		display: flex;
+		height: 188px;
+		width: 188px;
+		&>img {
+			margin: auto;
+		}
+	}
 }
 
 .field {
